@@ -13,7 +13,7 @@ CXX=powerpc-apple-darwin10-gcc
 TAR=tar
 SED=sed
 PATCH=patch
-CFLAGS=-DZONES -DRENICE -s -Wall -O2 -DSLIMPROTO_DEBUG -DINTERACTIVE -DDAEMONIZE -D__BIG_ENDIAN__ -DPORTAUDIO_DEV -DUSE_SIGNALS_FOR_RESTART -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc
+CFLAGS=-DZONES -DRENICE -s -Wall -O2 -DSLIMPROTO_DEBUG -DINTERACTIVE -DDAEMONIZE -D__BIG_ENDIAN__ -DPORTAUDIO_DEV -DUSE_SIGNALS_FOR_RESTART -isysroot /Developer/SDKs/MacOSX10.4u.sdk -mcpu=G3 -arch ppc
 LDFLAGS=-Wl,-syslibroot,/Developer/SDKs/MacOSX10.4u.sdk -arch ppc -mmacosx-version-min=10.3
 
 INCLUDE=-Ilib/libportaudio/$(OS)/include -Isrc -Ilib/libmad/$(OS)/include -Ilib/vorbis/$(OS)/include -Ilib/flac/$(OS)/include -Ilib/lirc/$(OS)/include
@@ -22,7 +22,7 @@ LIBMAD=libmad-0.15.1b
 LIBOGG=libogg-1.2.2
 LIBVORBIS=libvorbis-1.3.3
 LIBFLAC=flac-1.2.1
-LIBPORTAUDIO=portaudio-r1834
+LIBPORTAUDIO=portaudio-r1857
 LIBLIRC=lirc-0.8.6
 
 SLIMPROTOFILES:=src/slimaudio/slimaudio_http.c src/slimaudio/slimaudio_decoder.c src/slimaudio/slimaudio_decoder_flac.c src/slimaudio/slimaudio_decoder_mad.c src/slimaudio/slimaudio_decoder_vorbis.c src/slimaudio/slimaudio_decoder_pcm.c src/slimaudio/slimaudio_output.c src/slimaudio/slimaudio_buffer.c src/slimaudio/slimaudio.c src/slimproto/slimproto.c
