@@ -4,8 +4,8 @@
             mac_sysroot=""
             mac_version=""
          fi
-+	mac_arches="-mcpu=G3 -arch ppc"
-+	mac_sysroot="-isysroot /Developer/SDKs/MacOSX10.4u.sdk"
++	mac_arches="-m64 -arch ppc64"
++	mac_sysroot="-isysroot /Developer/SDKs/MacOSX10.5.sdk"
          SHARED_FLAGS="$LIBS -dynamiclib $mac_arches $mac_sysroot $mac_version_min"
          CFLAGS="-std=c99 $CFLAGS $mac_arches $mac_sysroot $mac_version_min"
          OTHER_OBJS="src/os/unix/pa_unix_hostapis.o src/os/unix/pa_unix_util.o src/hostapi/coreaudio/pa_mac_core.o src/hostapi/coreaudio/pa_mac_core_utilities.o src/hostapi/coreaudio/pa_mac_core_blocking.o src/common/pa_ringbuffer.o"
